--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,30 +1,8 @@
-/* .img-wrapper{
-
-} */
-/* .card-img{
-    opacity: 0.99;
-} */
-.play-icon {
-    position: absolute;
-    top: 50%; /* position the top  edge of the element at the middle of the parent */
-    left: 50%; /* position the left edge of the element at the middle of the parent */
-
-    transform: translate(-50%, -50%);
-    font-size: 4rem;
-    color: rgb(65, 64, 64, 0.8);
+* {
+    font-family: 'Poppins', sans-serif;
 }
-.live-icon {
-    position: absolute;
-    top: 0;
-    right: 0;
-    margin: 10px;
-}
-.live-icon img {
-    width: 35px;
-    height: auto;
-}
-
 .hero-section {
     background-image: url('./assets/imgs/home-page-banner.jpeg');
     background-size: cover;
+    background-attachment: fixed;
 }
